# cron-services

./: .dockerignore  .gitignore  Dockerfile  ISSUES.md  MIGRATION.md  Makefile  README.md  geonames-urls.txt  maxmind-urls.txt  ofcom-urls.txt  pyproject.toml  time.txt
.github/workflows/: ecb.yml  geonames.yml  maxmind.yml  ofcom.yml  scheduled.yml
deploy/: install.sh  maxmind.env.example
scripts/: ecb-sync.sh  geonames-sync.sh  lib.sh  maxmind-sync.sh  ofcom-sync.sh
src/: cli.py  config.py  downloader.py  storage.py
src/jobs/: __init__.py  base.py  ecb.py  geonames.py  maxmind.py  ofcom.py
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_placeholder.py
wfctl/: ecb-sync.yaml  geonames-sync.yaml  maxmind-sync.yaml  ofcom-sync.yaml
wfctl/templates/: ecb-sync.yaml  geonames-sync.yaml  maxmind-sync.yaml  ofcom-sync.yaml
