[project]
name = "cron-services"
version = "0.1.0"
description = "Scheduled data sync services for GCP Cloud Run"
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "httpx>=0.27.0",
    "google-cloud-storage>=2.18.2",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "G", "PIE", "T20", "Q"]
ignore = ["ISC001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
